Added test for post